# ukui-interface

./: .gitattributes  README  configure.ac
data/: Makefile.am  background.service  cn.kylinos.background.service  cn.kylinos.background.xml  cn.kylinos.desktop.service  cn.kylinos.desktop.xml  cn.kylinos.font.service  cn.kylinos.font.xml  cn.kylinos.interface.service  cn.kylinos.interface.xml  cn.kylinos.keyboard.service  cn.kylinos.keyboard.xml  cn.kylinos.marcogeneral.service  cn.kylinos.marcogeneral.xml  cn.kylinos.mouse.service  cn.kylinos.mouse.xml  cn.kylinos.power.service  cn.kylinos.power.xml  cn.kylinos.screensaver.service  cn.kylinos.screensaver.xml  cn.kylinos.session.service  cn.kylinos.session.xml  cn.kylinos.touchpad.service  cn.kylinos.touchpad.xml  cn.kylinos.xkbgeneral.service  cn.kylinos.xkbgeneral.xml  desktop.service  font.service  interface.service  keyboard.service  marcogeneral.service  mouse.service  power.service  screensaver.service  session.service  touchpad.service  xkbgeneral.service
debian/: backgroundserver.install  changelog  control  copyright  desktopserver.install  desktopserver.manpages  fontserver.install  interfaceserver.install  keyboardserver.install  keyboardserver.manpages  libbackgroundclient-dev.install  libbackgroundclient0.install  libbackgroundclient0.manpages  libbackgroundclient0.symbols  libdatesetting-dev.install  libdatesetting0.install  libdatesetting0.symbols  libdefaultprograms-dev.install  libdefaultprograms0.install  libdefaultprograms0.symbols  libdesktopclient-dev.install  libdesktopclient0.install  libdesktopclient0.symbols  libfontclient-dev.install  libfontclient0.install  libfontclient0.manpages  libfontclient0.symbols  libgsettings-dev.install  libgsettings0.install  libgsettings0.symbols  libinterfaceclient-dev.install  libinterfaceclient0.install  libinterfaceclient0.manpages  libinterfaceclient0.symbols  libkeyboardclient-dev.install  libkeyboardclient0.install  libkeyboardclient0.symbols  libmarcogeneralclient-dev.install  libmarcogeneralclient0.install  libmarcogeneralclient0.manpages  (+126 more)
debian/tests/: control  testlog4qt.sh
debian/upstream/: metadata
man/: backgroundserver.1  desktopserver.1  fontserver.1  interfaceserver.1  keyboardserver.1  marcogeneralserver.1  mouseserver.1  powerserver.1  screensaverserver.1  sessionserver.1  touchpadserver.1  xkbgeneralserver.1
po/: Makevars  zh_CN.po
src/: Makefile.am
src/accounts/user/: Makefile.am  kylin-user-interface.c  kylin-user-interface.h
src/common/: Makefile.am  kylin-com4c.c  kylin-com4c.h  kylin-com4cxx.cpp  kylin-com4cxx.h  kylin-common.c  kylin-common.h  kylin-gsettings-set.c  kylin-gsettings-set.h  kylin-ini.c  kylin-ini.h  kylin-print.c  kylin-print.h
src/date/dttm/: Makefile.am  kylin-date-interface.c  kylin-date-interface.h
src/hardware/keyboard/: Makefile.am  interface-dbus.h  interface-generated.c  interface-generated.h  keyboard-dbus.h  keyboard-generated.c  keyboard-generated.h  kylin-interface-interface.c  kylin-interface-interface.h  kylin-interface-server.c  kylin-keyboard-interface.c  kylin-keyboard-interface.h  kylin-keyboard-server.c  kylin-xkbgeneral-interface.c  kylin-xkbgeneral-interface.h  kylin-xkbgeneral-server.c  xkbgeneral-dbus.h  xkbgeneral-generated.c  xkbgeneral-generated.h
src/hardware/mouse/: Makefile.am  kylin-mouse-interface.c  kylin-mouse-interface.h  kylin-mouse-server.c  mouse-dbus.h  mouse-generated.c  mouse-generated.h
src/hardware/power/: Makefile.am  kylin-power-interface.c  kylin-power-interface.h  kylin-power-server.c  kylin-screensaver-interface.c  kylin-screensaver-interface.h  kylin-screensaver-server.c  kylin-session-interface.c  kylin-session-interface.h  kylin-session-server.c  power-dbus.h  power-generated.c  power-generated.h  screensaver-dbus.h  screensaver-generated.c  screensaver-generated.h  session-dbus.h  session-generated.c  session-generated.h
src/hardware/touchpad/: Makefile.am  kylin-touchpad-interface.c  kylin-touchpad-interface.h  kylin-touchpad-server.c  touchpad-dbus.h  touchpad-generated.c  touchpad-generated.h
src/log4qt/: org.ukui.log4qt-test.gschema.xml  org.ukui.log4qt.gschema.xml  ukui-log4qt.cpp  ukui-log4qt.h  ukui-log4qt.pro  ukui-logconfigurator.cpp  ukui-logconfigurator.h  ukui-logmacros.h  ukui-logrolling.cpp  ukui-logrolling.h
src/log4qt/debian/: changelog  control  copyright  libukui-log4qt-dev.install  rules
src/log4qt/log4qt/: appender.h  appenderskeleton.h  basicconfigurator.h  consoleappender.h  dailyrollingfileappender.cpp  dailyrollingfileappender.h  fileappender.h  hierarchy.h  layout.h  level.h  log4qt.h  logger.h  loggerrepository.h  loggingevent.cpp  loggingevent.h  logmanager.cpp  logmanager.h  mdc.h  ndc.h  patternlayout.h  propertyconfigurator.h  rollingfileappender.cpp  rollingfileappender.h  simplelayout.h  ttcclayout.h  writerappender.cpp  writerappender.h
src/log4qt/log4qt/helpers/: asyncdispatcher.cpp  asyncdispatcher.h  classlogger.h  configuratorhelper.h  (+9 more)
src/network/network/: Makefile.am  kylin-network-interface.c  kylin-network-interface.h
src/os/subversion/: Makefile.am  kylin-version-interface.cpp  kylin-version-interface.h
src/os/sysinfo/: Makefile.am  kylin-sysinfo-interface.c  kylin-sysinfo-interface.h
src/personal/background/: Makefile.am  background-dbus.h  background-generated.c  background-generated.h  kylin-background-interface.c  kylin-background-interface.h  kylin-background-server.c
src/personal/desktop/: Makefile.am  desktop-dbus.h  desktop-generated.c  desktop-generated.h  kylin-desktop-interface.c  kylin-desktop-interface.h  kylin-desktop-server.c
src/personal/font/: Makefile.am  font-dbus.h  font-generated.c  font-generated.h  kylin-font-interface.c  kylin-font-interface.h  kylin-font-server.c
src/personal/marcogeneral/: Makefile.am  kylin-marcogeneral-interface.c  kylin-marcogeneral-interface.h  kylin-marcogeneral-server.c  marcogeneral-dbus.h  marcogeneral-generated.c  marcogeneral-generated.h
src/software/defaultprograms/: Makefile.am  kylin-defaultprograms-interface.c  kylin-defaultprograms-interface.h
(+10 files in other folders)
