servicedir	= /lib/systemd/system/
dist_service_DATA = font.service \
	mouse.service touchpad.service \
	desktop.service \
	background.service \
	marcogeneral.service \
	xkbgeneral.service interface.service keyboard.service \
	power.service screensaver.service session.service \
	$(NULL)

dbusdir		= /usr/share/dbus-1/services
dist_dbus_DATA	= cn.kylinos.font.service \
	cn.kylinos.mouse.service cn.kylinos.touchpad.service \
	cn.kylinos.desktop.service \
	cn.kylinos.background.service \
	cn.kylinos.marcogeneral.service \
	cn.kylinos.xkbgeneral.service cn.kylinos.interface.service cn.kylinos.keyboard.service \
	cn.kylinos.power.service cn.kylinos.screensaver.service cn.kylinos.session.service \
	$(NULL)
