#Generata binary file 
lib_LTLIBRARIES  = libukui-network.la

#gcc -wall: displays all the errors and warning information when compiling
#gcc -g: add the debugging code when compiling 
COMM_CFS = -Wall -g

#Add the dependent source file for libnetwork.la
libukui_network_la_SOURCES = kylin-network-interface.c \
	$(NULL)

#The header files that need to be installed
include_HEADERS= kylin-network-interface.h \
	$(NULL)

