#Generata binary file 
lib_LTLIBRARIES  = libukui-sysinfo.la

#gcc -wall: displays all the errors and warning information when compiling
#gcc -g: add the debugging code when compiling 
COMM_CFS = -Wall -g

#Add the dependent source file for libsysinfo.la
libukui_sysinfo_la_SOURCES = kylin-sysinfo-interface.c \
	$(NULL)

#The header files that need to be installed
include_HEADERS= kylin-sysinfo-interface.h \
	$(NULL)

